# decimatr

./: .gitignore  .pre-commit-config.yaml  ACTOR_INTEGRATION_SUMMARY.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  quality.yml  release.yml  test.yml
.kiro/settings/: mcp.json
decimatr/: __init__.py  exceptions.py  gpu_utils.py  logging_config.py  main.py  metrics.py  orchestrator.py  scheme.py  utils.py  video_loader.py
decimatr/actors/: __init__.py  filter_actor.py  gpu_actor.py  pipeline.py  stateful_actor.py  tagger_actor.py
decimatr/buffers/: base_buffer.py  sliding_buffer.py  sliding_top_k_buffer.py
decimatr/core/: __init__.py  processor.py  temporal_buffer.py
decimatr/filters/: __init__.py  base.py  blur.py  comparison_strategies.py  diversity.py  duplicate.py  entropy.py  motion.py  tag_classification.py  threshold.py
decimatr/strategies/: base.py  blur_removal.py  duplicate_detection.py  smart_sampling.py
decimatr/taggers/: __init__.py  base.py  blur.py  clip.py  entropy.py  hash.py
docs/: API.md  DIVERSITY_FILTER_EXAMPLES.md  DIVERSITY_FILTER_MIGRATION.md  GPU_SETUP.md  QUICK_REFERENCE.md
examples/: README.md  actor_pipeline_demo.py  diversity_filter_examples.py  frame_processor_demo.py  gpu_batch_processing_demo.py  performance_optimizations_demo.py
scripts/: release.sh
tests/: conftest.py  test_gpu_batch_processor.py  test_metrics.py  test_performance_optimizations.py  test_processor_actor_integration.py  test_temporal_buffer.py  test_utils.py  test_video_loader.py
tests/filters/: test_blur_filter.py  (+8 more)
(+15 files in other folders)
